--- a/app/partials/secondpartial.html
+++ b/app/partials/secondpartial.html
@@ -1,1 +1,11 @@
-<h1 class="text-center">Second Partial</h1>
+
+
+<div class="viewSongDiv">
+  <h1>{{ selectedSong.title }}</h1>
+  <h3>By: {{ selectedSong.artist }}</h3>
+  <h4>Album: {{ selectedSong.album }}</h4>
+    <h6>{{ selectedSong.genre }}</h6>
+  </ul>
+</div>
+
+<a href="#/" class="btn btn-info">Back</a>
